# automated_testing

./: README.md  main.py  pyproject.toml  requirements_test.txt
.github/workflows/: tests.yml
src/utils/: utils.py
tests/: test_example_module.py  test_utils.py
