[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "automated_testing"
version = "0.1.0"
description = ""
authors = [{ name = "Filip Kristofersson", email = "filip.kristofersson@vti.se" }]
# If your project has dependencies, list them here:
dependencies = []
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "pytest"
]