[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "automated_testing"
version = "0.1.0"
description = ""
authors = [{ name = "Filip Kristofersson", email = "filip.kristofersson@vti.se" }]
# If your project has dependencies, list them here:
dependencies = []

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.pytest.ini_options]
addopts = "-v"
# Register custom pytest markers here.
# 'slow' is a custom marker (not built-in) for long-running tests.
# Registering avoids warnings and lets you select/deselect these tests.
# Usage: pytest -m slow  /  pytest -m "not slow"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]